--- a/pom.xml
+++ b/pom.xml
@@ -39,4 +39,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/douglashiura/picon</url>
+		</repository>
+	</distributionManagement>
 </project>
