--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.douglashiura</groupId>
 	<artifactId>picon</artifactId>
-	<version>v1.0.0</version>
+	<version>1.0.1</version>
 	<name>Picon</name>
 	<dependencies>
 
