--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.douglashiura</groupId>
 	<artifactId>picon</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.6</version>
 	<name>Picon</name>
 	<description>
         Picon extension for Junit 4.12
@@ -17,11 +17,19 @@
 			<email>douglashiura@gmail.com</email>
 		</developer>
 	</developers>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
+		</license>
+	</licenses>
+
+
 	<scm>
-		<url>git@github.com:douglashiura/picon.git</url>
+		<url>git@github.com/douglashiura/picon.git</url>
 		<connection>scm:git:git@github.com:douglashiura/picon.git</connection>
 		<developerConnection>scm:git:git@github.com:douglashiura/picon.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>maven</tag>
 	</scm>
 
 	<issueManagement>
@@ -30,7 +38,11 @@
 	</issueManagement>
 
 	<dependencies>
-		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<java.version>11</java.version>
@@ -85,7 +97,22 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
+
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>${maven-resources-plugin.version}</version>
