doc: adjusts licence

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
 	</developers>
 	<licenses>
 		<license>
-			<name>GNU Lesser General Public License</name>
-			<url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
+			<name>No Free - Proprietary software license</name>
 		</license>
 	</licenses>
 
