--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.douglashiura</groupId>
 	<artifactId>picon</artifactId>
-	<version>5.0-SNAPSHOT</version>
+	<version>5.0</version>
 	<name>Picon</name>
 	<description>
         Picon extension for Junit 5 and Java 1.8
@@ -28,7 +26,7 @@
 		<url>git@github.com/douglashiura/picon.git</url>
 		<connection>scm:git:git@github.com:douglashiura/picon.git</connection>
 		<developerConnection>scm:git:git@github.com:douglashiura/picon.git</developerConnection>
-		<tag>maven</tag>
+		<tag>picon-5.0</tag>
 	</scm>
 
 	<issueManagement>
